Fixed spacing of content on the left border

--- a/app/overview/client_listing/client.css
+++ b/app/overview/client_listing/client.css
@@ -293,7 +293,7 @@ Mobile Navigation QUERIES
     top: 100px;
     width: 320px;
     height: 1120px;
-    margin-left: 7%;
+    margin-left: 5.5%;
   }
 
   .scroller {
