--- a/app/overview/community_planning/community.css
+++ b/app/overview/community_planning/community.css
@@ -240,8 +240,8 @@ Mobile Navigation QUERIES
     position: relative;
     top: 100px;
     width: 320px;
-    height: 650px;
-    margin-left: 7%;
+    height: 600px;
+    margin-left: 5.5%;
   }
 
   .scroller {
