--- a/app/overview/construction_admin/construction.css
+++ b/app/overview/construction_admin/construction.css
@@ -255,7 +255,7 @@ Mobile Navigation QUERIES
     top: 100px;
     width: 320px;
     height: 680px;
-    margin-left: 7%;
+    margin-left: 5.5%;
   }
 
   .scroller {
