--- a/app/overview/graphics/graphics.css
+++ b/app/overview/graphics/graphics.css
@@ -250,7 +250,7 @@ Mobile Navigation QUERIES
     top: 100px;
     width: 320px;
     height: 420px;
-    margin-left: 7%;
+    margin-left: 5.5%;
   }
 
   .scroller {
