--- a/app/overview/landscape_architecture/landscape.css
+++ b/app/overview/landscape_architecture/landscape.css
@@ -254,8 +254,8 @@ Mobile Navigation QUERIES
     position: relative;
     top: 100px;
     width: 320px;
-    height: 980px;
-    margin-left: 7%;
+    height: 950px;
+    margin-left: 5.5%;
   }
 
   .scroller {
