--- a/app/overview/overview.css
+++ b/app/overview/overview.css
@@ -264,7 +264,7 @@ Mobile Navigation QUERIES
     top: 100px;
     width: 320px;
     height: 540px;
-    margin-left: 7%;
+    margin-left: 5.5%;
   }
 
 
